Appl Icon hinzugefügt
Ein Taskleisten Icon wurde implementiert

Co-Authored-By: bkglKonnerth <89518056+bkglKonnerth@users.noreply.github.com>

--- a/Datingseite/Datingseite.csproj
+++ b/Datingseite/Datingseite.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.26" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,10 +24,6 @@
       <SubType>Code</SubType>
       <DependentUpon>Testseite1.xaml.cs</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="images\" />
   </ItemGroup>
 
 </Project>
