--- a/Datingseite/Datingseite.csproj
+++ b/Datingseite/Datingseite.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.26" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
